# bridgeBASE

./: .gitignore  README.md  bridgeBASE2  bridgeBASE3
solana/programs/bridge/: Cargo.toml  idl.json
solana/programs/bridge/src/: constants.rs  errors.rs  lib.rs
solana/programs/bridge/src/base_to_solana/: constants.rs  mod.rs
solana/programs/bridge/src/base_to_solana/instructions/: mod.rs  prove_message.rs  register_output_root.rs  relay_message.rs
solana/programs/bridge/src/base_to_solana/instructions/buffered/: append_to_prove_buffer_data.rs  append_to_prove_buffer_proof.rs  close_prove_buffer.rs  initialize_prove_buffer.rs  mod.rs  prove_message_buffered.rs
solana/programs/bridge/src/base_to_solana/instructions/token/: finalize_sol_transfer.rs  finalize_spl_transfer.rs  mod.rs  (+2 more)
solana/programs/bridge/src/base_to_solana/internal/: ix.rs  message.rs  mmr.rs  mod.rs  signatures.rs
solana/programs/bridge/src/base_to_solana/state/: incoming_message.rs  mod.rs  output_root.rs  partner_config.rs
solana/programs/bridge/src/common/: constants.rs
solana/programs/bridge/src/common/instructions/: close_outgoing_message.rs  guardian.rs  initialize.rs  mod.rs  oracle_signers.rs
solana/programs/bridge/src/common/internal/: init_config.rs  math.rs  metadata.rs  mod.rs
solana/programs/bridge/src/common/state/: bridge.rs  mod.rs  oracle_signers.rs
solana/programs/bridge/src/instructions/: deposit_transaction.rs  factory.rs  initializer.rs  messenger.rs  mod.rs  portal.rs  post_root.rs  receiver.rs  standard_bridge.rs  token_bridge.rs
solana/programs/bridge/src/solana_to_base/: constants.rs  mod.rs
solana/programs/bridge/src/solana_to_base/instructions/: bridge_call.rs  bridge_sol.rs  bridge_spl.rs  bridge_wrapped_token.rs  buffer_call.rs  buffer_sol_transfer.rs  buffer_spl_transfer.rs  buffer_wrapped_token_transfer.rs  create_call_operation.rs  create_sol_transfer_operation.rs  create_spl_transfer_operation.rs  create_wrapped_token_transfer_operation.rs  mod.rs  oneshot_call.rs  oneshot_sol_transfer.rs  oneshot_spl_transfer.rs  oneshot_wrapped_token_transfer.rs  send_call_message.rs  send_message.rs  send_transfer_message.rs  wrap_token.rs
solana/programs/bridge/src/solana_to_base/internal/: bridge_call.rs  bridge_sol.rs  bridge_spl.rs  bridge_wrapped_token.rs  call_operation.rs  mod.rs  sol_transfer_operation.rs  solidity.rs  spl_transfer_operation.rs  wrapped_token_transfer_operation.rs
solana/programs/bridge/src/solana_to_base/state/: call_buffer.rs  mod.rs  operation.rs  outgoing_message.rs  outgoing_message_header.rs
solana/programs/bridge/src/state/: deposit.rs  message.rs  messenger_state.rs  mod.rs  output_root.rs  vault.rs
solana/programs/bridge/src/test_utils/: mod.rs
solana/programs/bridge/src/utils/: ix_utils.rs  merkle_utils.rs  mod.rs
solana/programs/portal/: Cargo.toml
solana/programs/portal/src/: constants.rs  lib.rs  solidity.rs  test_utils.rs
solana/programs/portal/src/instructions/: initialize.rs  mod.rs
solana/programs/portal/src/instructions/base_to_solana/: mod.rs  prove_call.rs  register_output_root.rs  relay_call.rs
solana/programs/portal/src/instructions/solana_to_base/: mod.rs  send_call.rs  send_call_with_eth.rs  send_message.rs
solana/programs/portal/src/internal/: ix.rs  merkle_utils.rs  mod.rs  send_call.rs
solana/programs/portal/src/state/: call.rs  eip1559.rs  messenger.rs  mod.rs  portal.rs  remote_call.rs
solana/programs/portal/tests/: initialize.rs  mod.rs
solana/programs/portal/tests/solana_to_base/: mod.rs  send_call.rs  send_message.rs
solana/programs/token_bridge/: Cargo.toml
solana/programs/token_bridge/src/: constants.rs  lib.rs  solidity.rs  test_utils.rs
solana/programs/token_bridge/src/instructions/: mod.rs
solana/programs/token_bridge/src/instructions/base_to_solana/: bridge_back_sol.rs  bridge_back_spl.rs  bridge_token.rs  finalize_bridge_sol.rs  finalize_bridge_spl.rs  finalize_bridge_token.rs  mod.rs  wrap_token.rs
solana/programs/token_bridge/src/instructions/solana_to_base/: bridge_back_token.rs  bridge_sol.rs  bridge_spl.rs  mod.rs
solana/programs/token_bridge/src/internal/: metadata.rs  mod.rs
solana/programs/token_bridge/tests/: mod.rs
solana/programs/token_bridge/tests/base_to_solana/: bridge_back_sol.rs  bridge_back_spl.rs  bridge_token.rs  finalize_bridge_sol.rs  finalize_bridge_spl.rs  finalize_bridge_token.rs  mod.rs  wrap_token.rs
(+330 files in other folders)
